--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,16 @@ requires = [
 ]
 build-backend = 'setuptools.build_meta'
 
+[tool.black]
+line-length = 120
+target-version = ['py39']
+
+[tool.isort]
+profile = "black"
+line_length = 120
+length_sort = "False"
+length_sort_sections = "stdlib"
+
 [ tool.gilesbot ]
   [ tool.gilesbot.circleci_artifacts ]
     enabled = true
